# bitbotng

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/cogs/: birthdays.py  monitoring.py
